Fix: aligned the text

--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ footer p {
 
 @media (max-width: 452px) {
     .opentowork-section {
-        padding: 2vh 1%;
+        padding: 2vh 3%;
     }
     .opentowork-section h2 {
         font-size: 2.1rem;
